fix: scrollbar Chrome — overflow-y:scroll, invit-photo/texte 620px, td images ajustés

--- a/site/ref/style/general.css
+++ b/site/ref/style/general.css
@@ -51,12 +51,12 @@
 #colonneA {top:60px; left:0px; width:280px; height:500px;}
 #colonneB {top:60px; left:150px; width:250px; height:500px;}
 
-#invit-texte  {position:absolute; top:20px; left:0px; width:640px; height:270px;}
+#invit-texte  {position:absolute; top:20px; left:0px; width:620px; height:270px;}
 #invit-titre1 {position:absolute; top:20px; left:0px; width:610px; height:80px;}
 #invit-titre2 {position:absolute; top:70px; left:0px; width:600px; height:80px;}
 #invit-titre3 {position:absolute; top:140px; left:0px; width:600px; height:70px;}
 #invit-titre4 {position:absolute; top:180px; left:0px; width:600px; height:50px;}
-#invit-photo  {position:absolute; top:270px; left:0px; width:640px; height:150px;}
+#invit-photo  {position:absolute; top:270px; left:0px; width:620px; height:150px;}
 
 #home-intro   {margin-top:440px; padding:0 20px 20px; color:#CCCCCC;}
 #home-intro h2 {font-size:13px; color:#8A97B3; margin:16px 0 6px; font-family:Century Gothic,sans-serif;}
